# ac112e6b40ed278155f9ba01f3d16c384cac5674e1cea62f7c67f4cda328a01b_no2_prediction

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .yamllint.yml  README.md  docker-compose.yml  gitignore  mlflow.db  pyproject.toml  requirements.txt
data/raw/: PHL_HUCs_Monthly_NO2_2018_2025.csv  PHL_Provinces_Monthly_NO2_2018_2025.csv
data/raw/Archive/features_quarter=2018-07-01/features.parquet/: .part-00000-17be41aa-7995-4fcb-8f55-931ebe56cbec-c000.snappy.parquet.crc  .part-00001-17be41aa-7995-4fcb-8f55-931ebe56cbec-c000.snappy.parquet.crc  (+232 more)
deploy/airflow/config/: airflow.cfg
deploy/airflow/dags/: ml_pipeline_dag.py  ml_pipeline_docker.py  ml_pipeline_steps.py
deploy/docker/: .dockerignore  Dockerfile  Dockerfile.mlflow  airflow.Dockerfile
mlflow/runs/611960611568562299/: meta.yaml
mlflow/runs/611960611568562299/2ea14a8685684bc9807682536a32ef6f/: meta.yaml
mlflow/runs/611960611568562299/6a326b4534cf4a9785cc2c75f17c35b5/: meta.yaml
mlflow/runs/611960611568562299/97f9f48e9fbc4e9cbf7cf3a555d7eb39/: meta.yaml
mlflow/runs/611960611568562299/b8761bf43e5f460d8160d7f49715b96d/: meta.yaml
mlflow/runs/611960611568562299/c5ffc4b823af47cdbde508c4c8ec729f/: meta.yaml
mlflow/runs/611960611568562299/fa63b300f111462799efc9f01ba5d051/: meta.yaml
mlflow/runs/732136922098939689/: meta.yaml
models/: xgb_during-pandemic.pkl  xgb_post-pandemic.pkl  xgb_pre-pandemic.pkl
reports/during-pandemic/: naive_metrics.txt  xgb_metrics.txt
reports/post-pandemic/: naive_metrics.txt  xgb_metrics.txt
reports/pre-pandemic/: naive_metrics.txt  xgb_metrics.txt
src/: data_ingestion.py  data_preprocessing.py  drift_detection.py  evaluation.py  feature_engineering.py  model_training.py  run_pipeline.py
(+6337 files in other folders)
