[project]
name = "no2_prediction"
version = "0.1.0"
description = "NO2 concentration prediction using machine learning"
dependencies = [
    "alembic==1.16.4",
    "cfgv==3.4.0",
    "cloudpickle==3.1.1",
    "colorlog==6.9.0",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "fonttools==4.58.5",
    "identify==2.6.12",
    "importlib-resources==6.5.2",
    "joblib==1.5.1",
    "kiwisolver==1.4.7",
    "llvmlite==0.43.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "nodeenv==1.9.1",
    "numba==0.60.0",
    "numpy==2.0.2",
    "optuna==4.4.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "pre-commit==4.2.0",
    "pyarrow==20.0.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "ruff==0.12.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "shap==0.48.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "sqlalchemy==2.0.41",
    "threadpoolctl==3.6.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "virtualenv==20.31.2",
    "xgboost==2.1.4",
    "zipp==3.23.0"
]
