[project]
name = "no2_prediction"
version = "0.1.0"
description = "NO2 concentration prediction using machine learning"
dependencies = [
    "pandas==2.3.1",
    "scikit-learn==1.7.0",
    "optuna==4.4.0",
    "xgboost==3.0.2",
    "shap==0.48.0",
    "matplotlib==3.10.3",
    "pyarrow==20.0.0",
    "pre-commit==4.2.0",
    "joblib==1.4.2"
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"src" = ["*.py"]
